--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ name: deploy to s3
 
 on: [push]
 
+permissions:
+  id-token: write # This is required for requesting the JWT
+  
 jobs:
   build:
     runs-on: ubuntu-latest
